Fixed clip-board scrollbar x expanding

--- a/JUNIOR/clipboard-landing-page-master/style.css
+++ b/JUNIOR/clipboard-landing-page-master/style.css
@@ -18,6 +18,9 @@ ul {
   list-style: none;
 }
 
+main{
+  overflow-x: hidden;
+}
 /**
 GENERAL SECTION STYLING
 */
